# scholargraph

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md
src/scholargraph/: __init__.py  cli.py
src/scholargraph/domain/: __init__.py  publication.py  synthesis.py
src/scholargraph/exporters/: __init__.py  publication.py
src/scholargraph/providers/: __init__.py  openai_synthesis.py  openalex.py
src/scholargraph/services/: __init__.py  model_synthesis.py  search.py  synthesis.py
tests/: test_cli.py  test_export_cli.py  test_exporters.py  test_model_summary_cli.py  test_model_synthesis.py  test_openai_synthesis.py  test_openalex.py  test_publication.py  test_search_service.py  test_summary_cli.py  test_synthesis.py  test_synthesis_service.py
