[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "scholargraph"
version = "0.1.0"
description = "An academic search engine with verifiable AI-assisted synthesis."
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Rayan Chenaoui" }
]
dependencies = [
    "httpx>=0.28",
    "pydantic>=2.10",
    "rich>=13.9",
    "typer>=0.15",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.14",
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "ruff>=0.9",
]

[project.scripts]
scholargraph = "scholargraph.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.13"
strict = true
files = ["src", "tests"]